--- a/static/index.html
+++ b/static/index.html
@@ -58,6 +58,35 @@
       background: #00dd00;
     }
 
+    /* Tabs */
+    .tabs {
+      display: flex;
+      justify-content: center;
+      gap: 2rem;
+      margin-top: 1rem;
+      border-bottom: 1px solid #00ff00;
+      padding-bottom: 0.5rem;
+    }
+
+    .tab {
+      cursor: pointer;
+      padding: 0.5rem 1rem;
+      font-weight: bold;
+      border-radius: 5px 5px 0 0;
+      color: #00ff00;
+      transition: all 0.3s ease;
+    }
+
+    .tab:hover {
+      background-color: #00ff0022;
+    }
+
+    .active-tab {
+      background-color: #00ff00;
+      color: #000;
+      box-shadow: 0 0 8px #00ff00;
+    }
+
     .tabs-nav {
       display: flex;
       flex-wrap: wrap;
@@ -132,7 +161,7 @@
       <button type="submit">Run Recon</button>
     </form>
 
-    <!-- Tabs for different sections -->
+    <!-- Tabs Navigation -->
     <div class="tabs">
       <div class="tab active-tab" id="reconTab">Recon Results</div>
       <div class="tab" id="exportTab">Export Data</div>
@@ -149,6 +178,7 @@
     const exportTab = document.getElementById('exportTab');
     let reconData = null;
 
+    // Tab switching
     reconTab.addEventListener('click', () => {
       reconTab.classList.add('active-tab');
       exportTab.classList.remove('active-tab');
